# pycpp

./: CMakeLists.txt  README.md
include/: CameraAdvanced.hpp  CameraBasic.hpp  CameraInterface.hpp  CameraMain.hpp  DataClasses.hpp  PyCppCamera.hpp
src/: CameraAdvanced.cpp  CameraBasic.cpp  CameraMain.cpp  PyCppCamera.cpp  main.cpp
